--- a/layouts/blog.html
+++ b/layouts/blog.html
@@ -3,9 +3,9 @@
   {% include "includes/head.html" %}
   <body>
     {% include "includes/nav.html" %}
-    <div>
+    <main>
       {{content}}
-    </div>
+    </main>
     {% include "includes/footer.html" %}
   </body>
 </html>
