--- a/layouts/news.html
+++ b/layouts/news.html
@@ -3,10 +3,9 @@
   {% include "includes/head.html" %}
   <body>
     {% include "includes/nav.html" %}
-    <div>
-      <h1>This is a news layout</h1>
+    <main>
       {{content}}
-    </div>
+    </main>
     {% include "includes/footer.html" %}
   </body>
 </html>
